Fix: Full screen editor not showing on the Block Editor

--- a/src/block-editor/style.scss
+++ b/src/block-editor/style.scss
@@ -101,9 +101,16 @@
 
 
 // Modal HTML Editor
-.chbe-admin-editor-config-item-help-editor {
-	width: 90vw;
-	min-height: 90vh;
+.chbe-fullscreen-editor {
+
+	.components-modal__content {
+		display: flex;
+		flex-flow: column;
+	}
+
+	.components-modal__header + div {
+		flex: 1;
+	}
 
 	.chbe-editor-wrapper {
 		height: 100%;
